# test-server

./: .gitignore  Package.swift  settings.gradle.kts
internal/record/: recording_https_proxy.go
internal/store/: store.go
scripts/update-sdk-checksums/: main.go
sdks/dotnet/: BinaryInstaller.cs  TestServerSdk.cs  TestServerSdk.csproj
sdks/dotnet/tools/installer/: Program.cs
sdks/kotlin/: build.gradle.kts  settings.gradle.kts
sdks/kotlin/src/main/kotlin/com/google/testserver/: BinaryInstaller.kt  TestServer.kt
sdks/kotlin/src/test/kotlin/com/google/testserver/: TestServerTest.kt
sdks/python/: pyproject.toml
sdks/python/src/test_server_sdk/: checksums.json  install.py
sdks/swift/Sources/TestServer/: BinaryInstaller.swift  TestServer.swift
sdks/swift/Tests/TestServerTests/: TestServerTests.swift
sdks/typescript/: package-lock.json  package.json  postinstall.js
sdks/typescript/sample/: package-lock.json
